fix single spacing and columns

--- a/css/responsive/desktop.styl
+++ b/css/responsive/desktop.styl
@@ -11,5 +11,5 @@
 // SINGLE
 
 #exhibition-content
-  column-count: 2
+  column-count: 3
   column-gap: $gutter
