--- a/css/site.css
+++ b/css/site.css
@@ -1646,9 +1646,9 @@ html,
     column-gap: 24px;
   }
   #exhibition-content {
-    -webkit-column-count: 2;
-    -moz-column-count: 2;
-    column-count: 2;
+    -webkit-column-count: 3;
+    -moz-column-count: 3;
+    column-count: 3;
     -webkit-column-gap: 24px;
     -moz-column-gap: 24px;
     column-gap: 24px;
